Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,23 @@
       
       <div class="events-catalogue">
         <h3 class="gold-text" style="text-align: center; font-size: 1.8rem; margin-bottom: 2rem;">🔥 Upcoming Events 🔥</h3>
+
+         <div class="event-card">
+  <div class="event-poster">
+    <img src="images/29nov.jpg" alt="Event Poster">
+  </div>
+</div>
+
+          <div class="event-details">
+            <h4>🔥BUHLE'S BIRTHDAY BASH🍖</h4>
+            <p class="event-date">📆 29TH NOV 2025 6PM-2AM</p>
+            <p class="event-description">💃🏾🔥 Music By: Abalali Music Et., Athwenduku, Snobza, Sia Da DJ, Tiro and Zukes </p>
+            <div style="text-align: center; margin-top: 1rem;">
+              <a href="#" class="cta-button">Learn More / RSVP</a>
+            </div>
+          </div>
+        </div>
+      </div>
         
         <div class="event-card">
   <div class="event-poster">
@@ -1333,6 +1350,15 @@
     <img src="images/client7.jpg" alt="Client 7">
     <img src="images/client8.jpg" alt="Client 8">
     <img src="images/client9.jpg" alt="Client 9">
+    <img src="images/client100.jpg" alt="Client 10">
+    <img src="images/client200.jpg" alt="Client 11">
+    <img src="images/client300.jpg" alt="Client 12">
+    <img src="images/client400.jpg" alt="Client 13">
+    <img src="images/client500.jpg" alt="Client 14">
+    <img src="images/client600.jpg" alt="Client 15">
+    <img src="images/client700.jpg" alt="Client 16">
+    <img src="images/client800.jpg" alt="Client 17">
+    <img src="images/client900.jpg" alt="Client 18">
   </div>
 </div>
 
