--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         <div class="menu-item-details">
           <h4>🍗 BBQ CHICKEN WING</h4>
           <p>Saucy Wings</p>
-          <span class="price">21</span>
+          <span class="price">R21</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20BBQ%20CHICKEN%20WINGS%20-%20R18.50')">
             Order Now
@@ -988,7 +988,7 @@
     <h3>🧀 Pizza Toppings</h3>
     <div class="menu-grid">
       <div class="menu-item">
-        <img src="images/cheese.jpg" alt="Cheese Topping" class="menu-item-image">
+        <img src="images/cheese.png" alt="Cheese Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🧀 Cheese</h4>
           <span class="price">R15</span>
@@ -996,7 +996,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/ham.jpg" alt="Ham Topping" class="menu-item-image">
+        <img src="images/ham.png" alt="Ham Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🍖 Ham</h4>
           <span class="price">R15</span>
@@ -1004,7 +1004,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/beef-mince.jpg" alt="Beef Mince Topping" class="menu-item-image">
+        <img src="images/beef-mince.png" alt="Beef Mince Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🥩 Beef Mince</h4>
           <span class="price">R15</span>
@@ -1012,7 +1012,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/chicken.jpg" alt="Chicken Topping" class="menu-item-image">
+        <img src="images/chicken.png" alt="Chicken Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🍗 Chicken</h4>
           <span class="price">R15</span>
@@ -1020,7 +1020,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/feta.jpg" alt="Feta Topping" class="menu-item-image">
+        <img src="images/feta.png" alt="Feta Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🧀 Feta</h4>
           <span class="price">R15</span>
@@ -1028,7 +1028,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/bacon.jpg" alt="Bacon Topping" class="menu-item-image">
+        <img src="images/bacon.png" alt="Bacon Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🥓 Bacon</h4>
           <span class="price">R15</span>
@@ -1036,7 +1036,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/salami.jpg" alt="Salami Topping" class="menu-item-image">
+        <img src="images/salami.png" alt="Salami Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🍖 Salami</h4>
           <span class="price">R15</span>
@@ -1044,7 +1044,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/mushroom.jpg" alt="Mushroom Topping" class="menu-item-image">
+        <img src="images/mushroom.png" alt="Mushroom Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🍄‍🟫 Mushroom</h4>
           <span class="price">R10</span>
@@ -1052,7 +1052,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/pepper.jpg" alt="Pepper Topping" class="menu-item-image">
+        <img src="images/pepper.png" alt="Pepper Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🫑 Pepper</h4>
           <span class="price">R10</span>
@@ -1060,7 +1060,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/chilli.jpg" alt="Chilli Topping" class="menu-item-image">
+        <img src="images/chilli.png" alt="Chilli Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🌶 Chilli</h4>
           <span class="price">R10</span>
@@ -1068,7 +1068,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/garlic.jpg" alt="Garlic Topping" class="menu-item-image">
+        <img src="images/garlic.png" alt="Garlic Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🧄 Garlic</h4>
           <span class="price">R19</span>
@@ -1076,7 +1076,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/spinach.jpg" alt="Spinach Topping" class="menu-item-image">
+        <img src="images/spinach.png" alt="Spinach Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🥬 Spinach</h4>
           <span class="price">R10</span>
@@ -1084,7 +1084,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/olives.jpg" alt="Olives Topping" class="menu-item-image">
+        <img src="images/olives.png" alt="Olives Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🌱 Olives</h4>
           <span class="price">R12</span>
@@ -1092,7 +1092,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/avocado.jpg" alt="Avocado Topping" class="menu-item-image">
+        <img src="images/avocado.png" alt="Avocado Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🥑 Avocado (Seasonal)</h4>
           <span class="price">R18</span>
@@ -1874,3 +1874,4 @@
   </script>
 </body>
 </html>
+
