Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
         <div class="menu-item-details">
           <h4>MARGHERITA</h4>
           <p>Tomato & Mozzarella</p>
-          <span class="price">R105</span>
+          <span class="price">R115</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -858,7 +858,7 @@
         <div class="menu-item-details">
           <h4>CARRIBBEAN</h4>
           <p>🍍 & 🥩</p>
-          <span class="price">R125</span>
+          <span class="price">R135</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -874,7 +874,7 @@
         <div class="menu-item-details">
           <h4>REGINA(The Queen)</h4>
           <p>🍄‍🟫 & 🥩</p>
-          <span class="price">R120</span>
+          <span class="price">R130</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -888,7 +888,7 @@
         <div class="menu-item-details">
           <h4>KASI SPECIAL</h4>
           <p>🧅, 🫑, 🌶 & 🧄</p>
-          <span class="price">R120</span>
+          <span class="price">R130</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -902,7 +902,7 @@
         <div class="menu-item-details">
           <h4>FARMER'S PIZZA</h4>
           <p>🍄‍🟫, 🌱, 🫑, 🌶, 🧅, & 🥬</p>
-          <span class="price">R135</span>
+          <span class="price">R145</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -917,7 +917,7 @@
         <div class="menu-item-details">
           <h4>MEXICAN (KASI STYLE)</h4>
           <p>🥩, 🧅, 🫑, 🌶 & 🧄</p>
-          <span class="price">R135</span>
+          <span class="price">R160</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -931,7 +931,7 @@
         <div class="menu-item-details">
           <h4>KIPPY</h4>
           <p>🍗,  🧀(feta) & 🍄‍🟫</p>
-          <span class="price">R140</span>
+          <span class="price">R150</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -945,7 +945,7 @@
         <div class="menu-item-details">
           <h4>4WAYS</h4>
           <p>🍄‍🟫, 🥩(ham), 🥬 & 🌱(olives)</p>
-          <span class="price">R135</span>
+          <span class="price">R145</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -959,7 +959,7 @@
         <div class="menu-item-details">
           <h4>INGULUBE</h4>
           <p>🥓, 🍖(salami) & 🥩(ham)</p>
-          <span class="price">R150</span>
+          <span class="price">R160</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -973,7 +973,7 @@
         <div class="menu-item-details">
           <h4>JEFF & RONEL</h4>
           <p>🥓, 🥬, 🧀(feta), & 🥑(Avo - Seasonal)</p>
-          <span class="price">R150</span>
+          <span class="price">R160</span>
           <button class="order-btn"
                   onclick="window.open('https://wa.me/27787876984?text=I%20want%20to%20order%20MARGHERITA%20PIZZA%20-%20R95')">
             Order Now
@@ -1052,7 +1052,7 @@
         </div>
       </div>
       <div class="menu-item">
-        <img src="images/pepper.png" alt="Pepper Topping" class="menu-item-image">
+        <img src="images/peppers.png" alt="Pepper Topping" class="menu-item-image">
         <div class="menu-item-details">
           <h4>🫑 Pepper</h4>
           <span class="price">R10</span>
@@ -1874,4 +1874,5 @@
   </script>
 </body>
 </html>
+
 
